--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@ body {
     color: #434455;
     background-color:#fff;;
 }
+h1, h2, h3, p, ul {
+    margin: 0 auto;
+    margin-bottom: 0;
+}
 ul {
     list-style-type: none;
 }
@@ -147,4 +151,16 @@ a {
 .list .dscr {
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+.container {
+    width: 1158px;
+    display: inline;
+}
+.section {
+    padding-left: 120px;
+    padding-right: 120px;
+}
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
