--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@ h1, h2, h3, p, ul {
 ul {
     list-style-type: none;
 }
+.navi {
+    display: flex;
+    align-items: center;
+
+}
 .navi .link {
     font-weight: 500;
     line-height: 1.5;
@@ -18,6 +23,8 @@ ul {
 }
 .first-part {
     background-color: #2e2f42;
+    padding: 188px 0;
+
 }
 .first-part .inscription {
     font-weight: 700;
@@ -26,6 +33,7 @@ ul {
     letter-spacing: 0.02em;
     text-align: center;
     color: #ffffff;
+    min-width: 496px;
 }
 .third-part {
     background-color: #f4f4fd;
@@ -66,6 +74,8 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 76px;
+
 }
 .logo .accent {
     color: #2e2f42;
@@ -116,6 +126,10 @@ ul {
     cursor: pointer;
     justify-content: flex-start;
     background-color: #4d5ae5;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
 }
 #nav li {
 font-weight: 500;
@@ -127,6 +141,10 @@ font-weight: 500;
 .contacts {
     font-style: normal;
     color: #434455;
+}
+contacts-list {
+    display: flex;
+    gap: 40px;
 }
 .contacts .link {
     font-family: "Roboto", sans-serif;
@@ -155,6 +173,7 @@ a {
 .container {
     width: 1158px;
     display: flex;
+    justify-content: center;
 }
 .section {
     padding-left: 120px;
@@ -163,8 +182,15 @@ a {
 .header {
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid #e7e9fc;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 .img {
     display: block;
     max-width: 100%;
 }
+.second-part {
+    padding: 120px 0;
+}
+.visually-hidden 
