--- a/css/styles.css
+++ b/css/styles.css
@@ -4,24 +4,32 @@ body {
     background-color:#fff;;
 }
 h1, h2, h3, p, ul {
-    margin: 0 auto;
+    margin: 0;
     margin-bottom: 0;
 }
 ul {
     list-style-type: none;
-    padding-left: 0;
+    padding: 0;
     margin: 0;
 }
 .navi {
     display: flex;
     align-items: center;
-
+    display: flex;
+    align-items: center;
+}
+.navili {
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 .navi .link {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    display: block;
+    padding: 24px 0;
 }
 .first-part {
     background-color: #2e2f42;
@@ -77,7 +85,10 @@ ul {
     text-transform: uppercase;
     color: #4d5ae5;
     margin-right: 76px;
-
+}
+.header-logo {
+  padding: 24px 0;
+  margin-right: 76px;
 }
 .logo .accent {
     color: #2e2f42;
@@ -143,9 +154,13 @@ font-weight: 500;
 .contacts {
     font-style: normal;
     color: #434455;
+    margin-left: auto;
 }
 .contacts-list {
     display: flex;
+    gap: 40px;
+    display: flex;
+    align-items: center;
     gap: 40px;
 }
 .contacts .link {
@@ -154,6 +169,7 @@ font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    padding: 24px 0;
 }
 a {
     text-decoration: none;
@@ -174,8 +190,8 @@ a {
 }
 .container {
     width: 1158px;
-    display: flex;
-    justify-content: center;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 .section {
     padding-left: 120px;
@@ -187,6 +203,10 @@ a {
     border-bottom: 1px solid #e7e9fc;
     margin: 0 auto;
     padding: 0 15px;
+}
+.header-container {
+    display: flex;
+    align-items: center;
 }
 .img {
     display: block;
