--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,8 @@ ul {
 }
 .under {
     background-color: #2e2f42;
+    padding: 100px 0;
+
 }
 .under .foot-parag {
     font-size: 16px;
@@ -139,7 +141,11 @@ ul {
     letter-spacing: 0.02em;
     color: #f4f4fd;
 }
-.first-part .push {
+foot-logo {
+    display: inline-block;
+    margin-bottom: 16px;
+}
+.push {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     line-height: 1.5;
@@ -152,6 +158,7 @@ ul {
     height: 56px;
     border: none;
     border-radius: 4px;
+    display: block;
 }
 #nav li {
 font-weight: 500;
@@ -217,7 +224,7 @@ a {
     display: flex;
     align-items: center;
 }
-.img {
+img {
     display: block;
     max-width: 100%;
     height: auto;
@@ -226,7 +233,16 @@ a {
     padding: 120px 0;
 }
 .visually-hidden {
-    display: none;
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            border: 0;
+            padding: 0;
+            white-space: nowrap;
+            clip-path: inset(100%);
+            clip: rect(0 0 0 0);
+            overflow: hidden;
 }
 .two-list {
     display: flex;
@@ -234,7 +250,7 @@ a {
     gap: 24px;
 }
 .features-dscr{
-    calc((100% - 72px) / 4);
+    width: calc((100% - 72px) / 4);
 }
 .three-list {
     display: flex;
