--- a/css/styles.css
+++ b/css/styles.css
@@ -122,13 +122,15 @@ ul {
     text-align: center;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 72px;
 }
-.list .three-name {
+.three-name {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 .under {
     background-color: #2e2f42;
@@ -197,8 +199,9 @@ a {
     color: #404BBF;
     background-color: #404BBF;
 }
-.list .part-of-list {
+.part-of-list {
     background-color: #ffffff;
+    width: calc((100% - 48px)) / 3;
 }
 .list .dscr {
     line-height: 1.5;
@@ -259,4 +262,19 @@ img {
 }
 .employee {
     padding: 32px 0;
+}
+.four-part-of {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.list-four {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+.foto {
+    padding: 32px 16px;
+    bottom: 1px solid #e7e9fc;
+    border-top: none;
 }
