--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,6 @@ img {
 }
 .foto {
     padding: 32px 16px;
-    bottom: 1px solid #e7e9fc;
+    border: 1px solid #e7e9fc;
     border-top: none;
 }
